tetrate/tis1501/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: prevent-duplicate-gateway-hostport-chainsaw
spec:
  steps:
    - name: apply-rbac-policy
      try:
        - apply:
            file: rbac-policy.yaml

    - name: apply-prevent-duplicate-gateway-hostport-policy
      try:
        - apply:
            file: ../prevent-duplicate-gateway-hostport.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-good-deployment
      try:
        - apply:
            file: resource-one.yaml


    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: resource-two.yaml
